# window

./: .gitignore  CMakeLists.txt  LICENSE  README.md  coding style.txt  debug.bat  generate.bat  make.bat
source/: template.ixx  window.ixx
standalone/: CMakeLists.txt
standalone/source/: main.cpp
